--- a/deployment/app_code/job/qubole-kinesis.ipynb
+++ b/deployment/app_code/job/qubole-kinesis.ipynb
@@ -2,14 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install boto3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['PYSPARK_SUBMIT_ARGS'] = '--packages=com.qubole.spark/spark-sql-kinesis_2.11/1.1.3-spark_2.4 pyspark-shell'\n",
-    "import findspark\n",
-    "findspark.init()\n",
+    "os.environ['PYSPARK_SUBMIT_ARGS'] = '--jars https://repo1.maven.org/maven2/com/qubole/spark/spark-sql-kinesis_2.12/1.2.0_spark-3.0/spark-sql-kinesis_2.12-1.2.0_spark-3.0.jar,/home/jovyan/.local/lib/python3.7/site-packages pyspark-shell'\n",
+    "\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.functions import from_json, col\n",
     "from pyspark.sql.types import StructField, StructType, StringType, IntegerType\n",
@@ -19,27 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ResponseMetadata': {'RequestId': 'c2d85e3c-cc43-37de-95a9-de32bfbdb25f',\n",
-       "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': 'c2d85e3c-cc43-37de-95a9-de32bfbdb25f',\n",
-       "   'x-amz-id-2': 'nQUjPs4QPhvKG2hBexaRZbPXyD47szAqq0WqtdGRYMHs5VVCqMzLL+O9EmYTbtbqkw17GFJdV7pNfFnKrq6W3rn07w4ME5awGhP/dI+9/P4=',\n",
-       "   'date': 'Sat, 27 Jun 2020 17:11:42 GMT',\n",
-       "   'content-type': 'application/x-amz-json-1.1',\n",
-       "   'content-length': '0'},\n",
-       "  'RetryAttempts': 0}}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# make sure you have your AWS cerdentials set before you can run this\n",
     "\n",
@@ -47,14 +37,20 @@
     "client = boto3.client('kinesis')\n",
     "stream_name='pyspark-kinesis'\n",
     "\n",
-    "client.create_stream(\n",
-    "        StreamName=stream_name,\n",
-    "        ShardCount=1)"
+    "try:\n",
+    "    print(\"create a new stream\")\n",
+    "    client.create_stream(\n",
+    "            StreamName=stream_name,\n",
+    "            ShardCount=1)\n",
+    "except:\n",
+    "    print(\"the stream exists\")\n",
+    "\n",
+    "client.describe_stream(StreamName=stream_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,19 +79,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "spark = SparkSession.builder \\\n",
-    "         .master('local[*]') \\\n",
     "         .appName('PySparkKinesis') \\\n",
     "         .getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,17 +98,15 @@
     "        .readStream \\\n",
     "        .format('kinesis') \\\n",
     "        .option('streamName', stream_name) \\\n",
-    "        .option('endpointUrl', 'https://kinesis.eu-west-1.amazonaws.com')\\\n",
-    "        .option('region', 'eu-west-1') \\\n",
-    "        .option('awsAccessKeyId', os.environ['KINESIS_ACCESS_KEY']) \\\n",
-    "        .option('awsSecretKey', os.environ['KINESIS_SECRET_KEY']) \\\n",
+    "        .option('endpointUrl', 'https://kinesis.us-east-1.amazonaws.com')\\\n",
+    "        .option('region', 'us-east-1') \\\n",
     "        .option('startingposition', 'TRIM_HORIZON')\\\n",
     "        .load()\\"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,36 +129,18 @@
     "    .outputMode('append')\\\n",
     "    .format('console')\\\n",
     "    .trigger(once=True) \\\n",
-    "    .start()\\\n",
+    "    .start() \\\n",
     "    .awaitTermination()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ResponseMetadata': {'RequestId': 'e6db1236-50ef-7819-b1aa-7c794fda075f',\n",
-       "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': 'e6db1236-50ef-7819-b1aa-7c794fda075f',\n",
-       "   'x-amz-id-2': 'EIDwFsTGgXZ30hunYdYiCITKsWz+fnJiBSu3rEJ6KD9N5TUTh4L0V8splZoOkJJiKXcPXJscDp44bHl5ixlqYHwVci6THu1J',\n",
-       "   'date': 'Sat, 27 Jun 2020 15:55:59 GMT',\n",
-       "   'content-type': 'application/x-amz-json-1.1',\n",
-       "   'content-length': '0'},\n",
-       "  'RetryAttempts': 0}}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# cleanup\n",
-    "client.delete_stream(StreamName=stream_name)"
+    "# delete the kinesis stream\n",
+    "# client.delete_stream(StreamName=stream_name)"
    ]
   },
   {
@@ -192,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
