add Kinesis example jobs

--- a/deployment/app_code/job/qubole-kinesis.ipynb
+++ b/deployment/app_code/job/qubole-kinesis.ipynb
@@ -11,12 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['PYSPARK_SUBMIT_ARGS'] = '--jars https://repo1.maven.org/maven2/com/qubole/spark/spark-sql-kinesis_2.12/1.2.0_spark-3.0/spark-sql-kinesis_2.12-1.2.0_spark-3.0.jar,/home/jovyan/.local/lib/python3.7/site-packages pyspark-shell'\n",
+    "os.environ['PYSPARK_SUBMIT_ARGS'] = '--jars /home/jovyan/spark-sql-kinesis_2.12-1.2.0_spark-3.0-SNAPSHOT.jar,/home/jovyan/.local/lib/python3.7/site-packages pyspark-shell'\n",
     "\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.functions import from_json, col\n",
@@ -27,11 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "create a new stream\n",
+      "the stream exists\n"
+     ]
+    }
+   ],
    "source": [
-    "# make sure you have your AWS cerdentials set before you can run this\n",
+    "# you don't need any AWS cerdentials set when running with EMR on EKS. We will use IRSA feature to control the access.\n",
     "\n",
     "# creating the Kinesis stream\n",
     "client = boto3.client('kinesis')\n",
@@ -43,14 +52,12 @@
     "            StreamName=stream_name,\n",
     "            ShardCount=1)\n",
     "except:\n",
-    "    print(\"the stream exists\")\n",
-    "\n",
-    "client.describe_stream(StreamName=stream_name)"
+    "    print(\"the stream exists\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,18 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark = SparkSession.builder \\\n",
-    "         .appName('PySparkKinesis') \\\n",
-    "         .getOrCreate()"
+    "spark = SparkSession.builder.appName('PySparkKinesis').getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,12 +106,13 @@
     "        .option('endpointUrl', 'https://kinesis.us-east-1.amazonaws.com')\\\n",
     "        .option('region', 'us-east-1') \\\n",
     "        .option('startingposition', 'TRIM_HORIZON')\\\n",
-    "        .load()\\"
+    "        .option('awsUseInstanceProfile', 'false') \\\n",
+    "        .load()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,19 +123,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kinesis\\\n",
+    "stream = kinesis\\\n",
     "    .selectExpr('CAST(data AS STRING)')\\\n",
     "    .select(from_json('data', schema).alias('data'))\\\n",
     "    .select('data.*')\\\n",
     "    .writeStream\\\n",
     "    .outputMode('append')\\\n",
     "    .format('console')\\\n",
-    "    .trigger(once=True) \\\n",
-    "    .start() \\\n",
+    "    .trigger(once=True)\\\n",
+    "    .start()\n",
     "    .awaitTermination()"
    ]
   },
@@ -142,13 +148,6 @@
     "# delete the kinesis stream\n",
     "# client.delete_stream(StreamName=stream_name)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
